--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-markdown": "^5.0.3",
     "react-uuid": "^1.0.2"
   },
   "devDependencies": {
